@@ -3,7 +3,7 @@ package com.e_commerce.mapper.order;
 import com.e_commerce.dto.order.cartItemDTO.CartItemCreateForm;
 import com.e_commerce.dto.order.cartItemDTO.CartItemDTO;
 import com.e_commerce.entity.order.CartItems;
-import com.e_commerce.entity.product.VariantValues;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
@@ -11,15 +11,15 @@ import java.util.stream.Collectors;
 
 @Component
 public class CartItemMapper {
+
     public CartItemDTO convertEntityToDTO(CartItems cartItem) {
         return CartItemDTO.builder()
                 .id(cartItem.getId())
                 .cartId(cartItem.getCart().getId())
-                .productVariantsId(cartItem.getProductVariant().getId())
+                .productId(cartItem.getProduct().getId())
                 .quantity(cartItem.getQuantity())
-
-                .imgUrl(cartItem.getProductVariant().getImgUrl())
-                .productName(cartItem.getProductVariant().getProduct().getName())
+                .imgUrl(cartItem.getProduct().getImgMain())
+                .productName(cartItem.getProduct().getName())
                 .price(cartItem.getPrice())
                 .note(cartItem.getNote())
                 .selected(cartItem.isSelected())
@@ -35,12 +35,12 @@ public class CartItemMapper {
     public List<CartItemDTO> convertPageToList(List<CartItems> cartItems) {
         return cartItems.stream()
                 .map(this::convertEntityToDTO)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public CartItemCreateForm convertEntityToCreateDTO(CartItems cartItem) {
         return CartItemCreateForm.builder()
-                .productVariantsId(cartItem.getProductVariant().getId())
+                .productId(cartItem.getProduct().getId())
                 .quantity(cartItem.getQuantity())
                 .build();
     }
@@ -48,6 +48,6 @@ public class CartItemMapper {
     public List<CartItems> convertCreateDTOListToEntityList(List<CartItemCreateForm> cartItemCreateForms) {
         return cartItemCreateForms.stream()
                 .map(this::convertCreateDTOToEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
